--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ pyowm==2.2.1
 wolframalpha==1.4
 futures==3.0.3
 requests-futures==0.9.5
-astral==0.9
+#astral==0.9
 tzlocal==1.2
 parsedatetime==1.5
 pyyaml==3.11
