--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ pyee==1.0.1
 SpeechRecognition==3.1.3
 tornado==4.2.1
 websocket-client==0.32.0
-adapt-parser==0.2.2
+adapt-parser==0.2.1
 pyowm==2.2.1
 wolframalpha==1.4
 futures==3.0.3
@@ -33,3 +33,5 @@ pyjokes==0.5.0
 psutil==4.1.0
 pep8==1.7.0
 --extra-index-url=http://pypi.mycroft.team
+--trusted-host pypi.mycroft.team
+
