--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,11 @@ gTTS==1.0.7
 backports.ssl-match-hostname==3.4.0.2
 certifi==2016.2.28
 PyAudio==0.2.8
-pyee==1.0.1
+pyee==0.1.0
 SpeechRecognition==3.1.3
 tornado==4.2.1
 websocket-client==0.32.0
-#adapt-parser==0.2.1
+adapt-parser==0.2.
 pyowm==2.2.1
 wolframalpha==1.4
 futures==3.0.3
@@ -32,4 +32,4 @@ netifaces==0.10.4
 pyjokes==0.5.0
 psutil==4.1.0
 pep8==1.7.0
-#--extra-index-url=http://pypi.mycroft.team
+--extra-index-url=http://pypi.mycroft.team
