--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ pyowm==2.2.1
 wolframalpha==1.4
 futures==3.0.3
 requests-futures==0.9.5
-#astral==0.9
+astral==latest
 tzlocal==1.2
 parsedatetime==1.5
 pdoc==0.3.2
@@ -32,4 +32,4 @@ netifaces==0.10.4
 pyjokes==0.5.0
 psutil==4.1.0
 pep8==1.7.0
---extra-index-url=http://pypi.mycroft.team
+--extra-index=http://pypi.mycroft.team
