--- a/requirements.txt
+++ b/requirements.txt
@@ -32,4 +32,5 @@ netifaces==0.10.4
 pyjokes==0.5.0
 psutil==4.1.0
 pep8==1.7.0
---extra-index=http://pypi.mycroft.team
+--extra-index-url=http://pypi.mycroft.team
+--trusted-host pypi.mycroft.team
