--- a/mycroft/configuration/defaults/defaults.ini
+++ b/mycroft/configuration/defaults/defaults.ini
@@ -49,7 +49,7 @@ timeout = 5  # in seconds
 session_ttl_seconds = 180
 
 [tts]
-module = "mimic"
+module = "mycroft-core.mimic"
 mimic.voice = "rms"
 espeak.lang = "english-us"
 espeak.voice = "m1"
