changed --extra-index-url to https

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,5 +32,5 @@ pyjokes==0.5.0
 psutil==4.1.0
 pep8==1.7.0
 adapt-parser==0.2.1
---extra-index-url=http://pypi.mycroft.team
+--extra-index-url=https://pypi.mycroft.team
 
