changed mimic executable path to mycroft-core.mimic

--- a/mycroft/configuration/mycroft.ini
+++ b/mycroft/configuration/mycroft.ini
@@ -50,8 +50,8 @@ timeout = 5  # in seconds
 session_ttl_seconds = 180
 
 [tts]
-module = "mimic"
-mimic.voice = "mycroft/tts/mycroft_voice_4.0.flitevox"
+module = "mycroft-core.mimic"
+mimic.voice = "slt"
 espeak.lang = "english-us"
 espeak.voice = "m1"
 
