changed mimic path for snappy, specifically. perhaps we can handle this a better way, then merge to master.

--- a/mycroft/configuration/mycroft.ini
+++ b/mycroft/configuration/mycroft.ini
@@ -50,7 +50,7 @@ timeout = 5  # in seconds
 session_ttl_seconds = 180
 
 [tts]
-module = "mycroft-core.mimic"
+module = "mimic"
 mimic.voice = "slt"
 espeak.lang = "english-us"
 espeak.voice = "m1"
